--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
     <p><a href="Star Wars.html">Star Wars Revenge of the Sith</a>
       </p>
     </p>
-    <p><a href="The Hobbit.html">The Hobbit</a><iframe width="560" height="315" src="https://www.youtube.com/embed/SDnYMbYB-nU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+    <p><a href="The Hobbit.html">The Hobbit</a>
     </p>
 <p><a href="The Avengers.html">The Avengers Age of Ultron</a></p>
     <p>&nbsp;</p>
